feat: new sections

--- a/index.html
+++ b/index.html
@@ -71,6 +71,68 @@
             </li>
           </ul>
         </section>
+        <section class="photo-grid">
+          <img
+            src="./images/grid__card/train.jpg"
+            alt="Вид из поезда"
+            class="photo-grid__image"
+          />
+          <img
+            src="./images/grid__card/atharva-tulsi.jpg"
+            alt="Тылышские горы"
+            class="photo-grid__image"
+          />
+          <img
+            src="./images/grid__card/tuman.jpg"
+            alt="Фотография поля с туманом"
+            class="photo-grid__image"
+          />
+          <img
+            src="./images/grid__card/sochi.jpg"
+            alt="Туманное сочи"
+            class="photo-grid__image"
+          />
+          <img
+            src="./images/grid__card/arisa-chattasa.jpg"
+            alt="Ариса Чатава"
+            class="photo-grid__image"
+          />
+          <img
+            src="./images/grid__card/baikal.jpg"
+            alt="Вид на озеро Байкал"
+            class="photo-grid__image"
+          />
+          <img
+            src="./images/grid__card/elbrus.jpg"
+            alt="Вид на гору Эльбрус"
+            class="photo-grid__image"
+          />
+          <img
+            src="./images/grid__card/(stanislav-kondratiev.jpg"
+            alt="Фото Станислава Кондратьева"
+            class="photo-grid__image"
+          />
+          <img
+            src="./images/grid__card/kamchatka.jpg"
+            alt="Вид на Камчатку"
+            class="photo-grid__image"
+          />
+          <img
+            src="./images/grid__card/kamchatka2.jpg"
+            alt="Вид на Камчатку другое фото"
+            class="photo-grid__image"
+          />
+          <img
+            src="./images/grid__card/baikal2.jpg"
+            alt="Вид на озеро Байкал другое фото"
+            class="photo-grid__image"
+          />
+          <img
+            src="./images/grid__card/ergaki.jpg"
+            alt="Эргаки"
+            class="photo-grid__image"
+          />
+        </section>
       </main>
     </div>
   </body>
